--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "phoenix": "^1.4.9",
     "phoenix-socket": "^1.2.3",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-session": "^1.0.0",
